Started styling the page.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Poppins:wght@100;200;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Odin - Form</title>
 </head>
 <body>
-    
+    <div class="parent flex">
+        <div class="section left">
+            <div class="title-bar flex">
+                <i class="fa-solid fa-leaf title logo"></i>
+                &nbsp;
+                <h1 class="title text">cjacqo</h1>
+            </div>
+            <div class="caption-bar">
+                <caption>Photo by <a href="https://unsplash.com/@_christianlambert?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Christian Lambert</a> on <a href="https://unsplash.com/t/nature?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></caption>
+            </div>
+        </div>
+        
+        <div class="section right">
+            <div class="wrapper">
+                <div class="hero-text wrap margin">
+                    <p>
+                        This is not a real online service! You know you need something like this 
+                        in your life to help you realize your deepest dreams.
+                        <span style="display: block;">Sign up&nbsp;<span style="font-style: italic">now</span>&nbsp;to get started</span>
+                    </p>
+                    <p>
+                        You know you want to!
+                    </p>
+                </div>
+                <div class="form container">
+                    <div class="margin">
+                        <h3 class="form-title">Let's do this!</h3>
+                        <form class="margin">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
