--- a/index.html
+++ b/index.html
@@ -37,10 +37,49 @@
                     </p>
                 </div>
                 <div class="form container">
-                    <div class="margin">
+                    <div class="margin colFlex">
                         <h3 class="form-title">Let's do this!</h3>
-                        <form class="margin">
+                        <form method="post">
+                            <fieldset>
+                                <div class="form-control">
+                                    <label for="first_name">First Name</label>
+                                    <input type="text" id="first_name" name="first_name">
+                                </div>
+
+                                <div class="form-control">
+                                    <label for="last_name">Last Name</label>
+                                    <input type="text" id="last_name" name="last_name">
+                                </div>
+                            </fieldset>
+                            <fieldset>
+                                <div class="form-control">
+                                    <label for="email">Email</label>
+                                    <input type="email" id="email" name="email">
+                                </div>
+
+                                <div class="form-control">
+                                    <label for="phone_number">Phone Number</label>
+                                    <input type="number" id="phone_number" name="phone_number">
+                                </div>
+                            </fieldset>
+                            <fieldset>
+                                <div class="form-control">
+                                    <label for="password">Password</label>
+                                    <input type="password" id="password" name="password">
+                                </div>
+
+                                <div class="form-control">
+                                    <label for="confirm_password">Confirm Password</label>
+                                    <input type="password" id="confirm_password" name="confirm_password">
+                                </div>
+                            </fieldset>
+                            <div class="submit-btn container">
+                                <button type="submit">Create Account</button>
+                            </div>
                         </form>
+                        <div class="swap-form container">
+                            <p>Already have an account? <a class="log-in" href="#">Log in</a></p>
+                        </div>
                     </div>
                 </div>
             </div>
