--- a/index.html
+++ b/index.html
@@ -43,34 +43,34 @@
                             <fieldset>
                                 <div class="form-control">
                                     <label for="first_name">First Name</label>
-                                    <input type="text" id="first_name" name="first_name">
+                                    <input required type="text" id="first_name" name="first_name">
                                 </div>
 
                                 <div class="form-control">
                                     <label for="last_name">Last Name</label>
-                                    <input type="text" id="last_name" name="last_name">
+                                    <input required type="text" id="last_name" name="last_name">
                                 </div>
                             </fieldset>
                             <fieldset>
                                 <div class="form-control">
                                     <label for="email">Email</label>
-                                    <input type="email" id="email" name="email">
+                                    <input required type="email" id="email" name="email">
                                 </div>
 
                                 <div class="form-control">
                                     <label for="phone_number">Phone Number</label>
-                                    <input type="number" id="phone_number" name="phone_number">
+                                    <input required type="number" id="phone_number" name="phone_number">
                                 </div>
                             </fieldset>
                             <fieldset>
                                 <div class="form-control">
                                     <label for="password">Password</label>
-                                    <input type="password" id="password" name="password">
+                                    <input required type="password" class="error" id="password" name="password">
                                 </div>
 
                                 <div class="form-control">
                                     <label for="confirm_password">Confirm Password</label>
-                                    <input type="password" id="confirm_password" name="confirm_password">
+                                    <input required type="password" class="error" id="confirm_password" name="confirm_password">
                                 </div>
                             </fieldset>
                             <div class="submit-btn container">
