Fixed the title on the left from not being centered when the full desktop size is used

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h1 class="title text">cjacqo</h1>
             </div>
             <div class="caption-bar">
-                <caption>Photo by <a href="https://unsplash.com/@_christianlambert?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Christian Lambert</a> on <a href="https://unsplash.com/t/nature?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></caption>
+                <caption>Photo by <a class="white-link" href="https://unsplash.com/@_christianlambert?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Christian Lambert</a> on <a class="white-link" href="https://unsplash.com/t/nature?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></caption>
             </div>
         </div>
         
